[tool.poetry]
name = "django_bitgo"
version = "0.2.0"
description = "Django app for bitGo"
authors = ["panosangelopoulos <panos.angelopoulos@outlook.com>"]
license = "MIT"
homepage = "https://github.com/accruvia/django_bitgo"
repository = "https://github.com/accruvia/django_bitgo"
readme = "README.md"
keywords = ["django", "bitgo", "django_bitgo"]

[tool.poetry.dependencies]
python = "^3.9"
Django = ">=4.2,<6.0"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
black = "^24.0"
pytest = "^7.1.3"
requests-mock = "^1.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
